# Fabric_4L

./: .env.dev  .env.dev.example  .env.example  .env.production-compose.template  .env.test.example  .gitattributes  .gitignore  .infisical.json  .npmrc  .pre-commit-config.yaml  .tool-versions  0001-chore-finish-legacy-path-cleanup.patch  4 layer  ADVERSARIAL_SECURITY_AUDIT.md  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_VALIDATION_REPORT.md  AUTHENTICATION_TEST_SUITE_INTEGRATION.md  AUTH_ROLE_ALIGNMENT_SUMMARY.md  Architecture.md  BILLING_SECURITY_FIXES_SUMMARY.md  BUG_CLASSES_ELIMINATED.md  CHANGELOG.md  CHANGES.md  CODE_REVIEW_FIXES_APPLIED.md  CODE_REVIEW_REPORT.md  COMPLIANCE.md  CONTRACT_ENFORCEMENT_ASSESSMENT.md  CONTRIBUTING.md  DEAD_CODE_SWEEP_REPORT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_EXECUTION_COMPLETE.md  DEPLOYMENT_REALITY_REPORT.md  DEPRECATIONS.md  DESIGN.md  EXECUTION_REPORT.md  EXECUTION_TASK_102_105.md  FRONTEND_AUDIT_REPORT.md  FRONTEND_AUDIT_SYNTHESIS.md  GATE_TEST_RESULTS.txt  (+139 more)
scripts/gates/: README.md  evaluate_release.py  pyproject.toml  run_agent.py  run_arch.py  run_chaos.py  run_contract.py  run_obs.py  run_security.py  run_smoke.py  run_state.py  validate_policy.py
scripts/gates/cli/: __init__.py  main.py
scripts/gates/evidence/: __init__.py  collector.py  indexer.py  models.py
scripts/gates/gated/: __init__.py  config.py  daemon.py  main.py
scripts/gates/plugins/: __init__.py  agent.py  arch.py  chaos.py  contract.py  obs.py  security.py  smoke.py  state.py
scripts/gates/policy/: __init__.py  engine.py  loader.py  models.py
scripts/gates/sdk/: __init__.py  models.py  plugin.py
scripts/gates/signing/: __init__.py  local.py  manifest.py
scripts/gates/tests/: __init__.py  conftest.py  test_daemon.py  test_policy.py
sdk/python/: README.md  pyproject.toml
sdk/python/scripts/: generate_from_openapi.py
sdk/python/tests/: test_cli.py  test_cli_search.py  test_client.py  test_generated_client.py  test_integration.py  test_sdk.py
services/api/: pyproject.toml
services/api/app/: main.py  shared_bootstrap.py
services/layer1-ingestion/: .gitignore  Dockerfile  Dockerfile.live  Dockerfile.uv  HTTPX_FAST_PATH_IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  conftest.py  docker-services.txt  pyproject.toml  requirements.txt
services/layer1-ingestion/migrations/: env.py
services/layer1-ingestion/scripts/: benchmark_router.py
services/layer1-ingestion/src/: __init__.py
services/layer1-ingestion/tests/: conftest.py  test_api_tenant_propagation.py  test_cross_tenant_hostile.py  test_observability_contract_integration.py
services/layer2-5-signal-refinery/: Dockerfile  alembic.ini  openapi.yaml  pyproject.toml
services/layer2-5-signal-refinery/tests/: conftest.py  test_signal_model.py  test_signal_routes.py  test_tenant_isolation.py
services/layer3-knowledge/: Dockerfile  Dockerfile.full  README.md  TASK3_IMPLEMENTATION_SUMMARY.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
services/layer3-knowledge/scripts/: check_app_monolith_shim_drift.py  check_backup_shim_drift.py  check_runtime_shim_drift.py
services/layer3-knowledge/security/: layer3_cypher_runtime_inventory.json
services/layer3-knowledge/src/: __init__.py  config.py  logging_config.py
services/layer3-knowledge/tests/: conftest.py  test_api.py  test_api_tenant_propagation.py  test_api_wrapper_startup_regression.py  test_backup_runtime_bindings.py  test_backup_tenant_scoping.py  test_benchmark_policies_route.py  test_cache_characterization.py  test_cache_oss1_parity.py  test_cache_ports.py  test_config.py  test_config_import_surface.py  test_cross_tenant_hostile.py  test_cypher_scope_remediation.py  test_dil_phase1.py  test_dil_phase2.py  test_e2e_pipeline.py  test_entities_route_tenant_scoped_regression.py  test_entrypoint_route_resolution_regression.py  test_error_handling_integration.py  test_evidence_links_tenant_isolation.py  test_exception_handlers.py  test_exception_mapping.py  test_exceptions.py  test_formula_governance_tenant_extraction.py  test_graph_alias_deprecation_policy.py  test_graphrag_endpoints.py  test_health_endpoints.py  test_hybrid_search_api_compat.py  test_i03_variables_production_fail_closed.py  test_ingestion.py  test_ingestion_endpoints.py  test_knowledge_subgraph_routes.py  test_l3_tenant_isolation_migrated_modules.py  test_layer3_compat_deprecation_phases.py  test_layer3_compat_metrics_thresholds.py  test_monolith_route_delegation_guardrail.py  test_neo4j_integration.py  test_neo4j_schema_integration.py  test_observability_contract_integration.py  (+27 more)
services/layer4-agents/: .env.example  .gitignore  Dockerfile  Dockerfile.full  Dockerfile.uv  README.md  TASK4_IMPLEMENTATION_SUMMARY.md  alembic.ini  pyproject.toml
services/layer4-agents/config/: harness.runtime.yaml  harness.service.yaml
services/layer4-agents/docs/: OPERATIONS.md  TROUBLESHOOTING.md  except_exception_inventory.md  harness-runbook.md  oidc-id-token-validation-contract.md  rate_limit_route_inventory.md
services/layer4-agents/manifests/: context_extraction_agent.abom.json  conversation_agent.abom.json  (+3 more)
services/layer5-ground-truth/: .dockerignore  Dockerfile  Dockerfile.full  Dockerfile.uv  README.md  alembic.ini  pyproject.toml
services/layer6-benchmarks/: .env.example  Dockerfile  Dockerfile.full  Dockerfile.uv  README.md  pyproject.toml
value-fabric/layer1-ingestion/: .gitignore  Dockerfile  Dockerfile.uv  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  unit-test-results.txt
value-fabric/layer2-extraction/: Dockerfile  Dockerfile.uv  debug_sse.py  pyproject.toml
value-fabric/layer3-knowledge/: Dockerfile  README.md  TASK3_IMPLEMENTATION_SUMMARY.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
value-fabric/layer4-agents/: .gitignore  Dockerfile  Dockerfile.uv  IMPLEMENTATION_SUMMARY.md  pyproject.toml
value-fabric/layer5-ground-truth/: Dockerfile  Dockerfile.uv  README.md  alembic.ini  pyproject.toml  pytest.ini
value-fabric/layer6-benchmarks/: Dockerfile  Dockerfile.uv  pyproject.toml
(+5951 files in other folders)
