# Value Fabric Layer 2.5: Signal Refinery

[project]
name = "layer2-5-signal-refinery"
version = "0.1.0"
description = "L2.5 Signal Refinery — turns L2 extraction output into trusted, evidence-backed ValueSignal objects"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}

authors = [
    {name = "Value Fabric Team"}
]

dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-multipart>=0.0.27",
    "httpx>=0.26",
    "python-dateutil>=2.9",
    "structlog>=24.1",
    "pyjwt>=2.8.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation>=0.42b0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "redis>=5.0.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.26",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/layer2_5_signal_refinery"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.26",
    "aiosqlite>=0.20",
]
