[project]
name = "layer3-knowledge"
version = "0.1.0"
description = "Knowledge Graph & Semantic Layer for Value Fabric Platform"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}

authors = [
    {name = "Value Fabric Team"}
]

dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "neo4j>=5.15",
    "pinecone-client>=3.0",
    "rdflib>=7.0",
    "sentence-transformers>=2.3",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-multipart>=0.0.6",
    "httpx>=0.26",
    "numpy>=1.26",
    "infisicalsdk>=1.0.0",
    "scikit-learn>=1.4",
    "networkx>=3.2",
    "redis>=5.0",
    "psutil>=5.9",
    "sqlalchemy>=2.0",
    "pyjwt>=2.8",
    "cryptography>=42.0",
    "structlog>=24.1",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation>=0.42b0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "testcontainers[neo4j]>=4.8",
    "sentence-transformers>=2.3",
    "black>=24.0",
    "ruff>=0.2",
    "mypy>=1.8",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top of file
    "E722",   # Do not use bare `except`
    "W291",   # Trailing whitespace
    "W293",   # Blank line contains whitespace
    "B007",   # Loop control variable not used in loop body
    "B008",   # Do not perform function call in default arguments (FastAPI Depends pattern)
    "B015",   # Pointless comparison
    "B027",   # Empty method in abstract base class
    "B904",   # Within an `except` clause, raise exceptions with `raise ... from err`
    "B905",   # `zip()` without an explicit `strict=` parameter
    "N805",   # First argument of a method should be named `self`
    "N811",   # Constant imported as non-constant
    "N818",   # Exception name should end with `Error`
    "N801",   # Auto-generated TypedDictModel result classes use snake_case names
    "UP042",  # Use `StrEnum` instead of `(str, enum.Enum)` – pre-existing pattern
    "UP007",  # Use `X | Y` for union types
    "SIM101", # Multiple `isinstance()` calls, merge into a single call
    "SIM102", # Use a single `if` statement instead of nested `if` statements
    "SIM103", # Return the condition directly
    "SIM105", # Use `contextlib.suppress(...)` instead of `try`-`except`-`pass`
    "SIM108", # Use ternary operator instead of `if`-`else`-block
    "SIM117", # Use a single `with` statement with multiple contexts
    "SIM118", # Use `key in dict` instead of `key in dict.keys()`
    "C401",   # Unnecessary generator (use a set comprehension)
    "C405",   # Unnecessary `set` literal
    "C414",   # Unnecessary `list` or `tuple` call within `list()`
    "C416",   # Unnecessary `list` comprehension
]

[tool.mypy]
python_version = "3.11"
# Note: Strict mode is enabled via Makefile CLI flags for CI consistency

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"