[project]
name = "layer3-knowledge"
version = "0.1.0"
description = "Knowledge Graph & Semantic Layer for Value Fabric Platform"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}

authors = [
    {name = "Value Fabric Team"}
]

dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "neo4j>=5.15",
    "pinecone-client>=3.0",
    "rdflib>=7.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-multipart>=0.0.27",
    "httpx>=0.26",
    "numpy>=1.26",
    "infisicalsdk>=1.0.0",
    "scikit-learn>=1.4",
    "networkx>=3.2",
    "redis>=5.0",
    "aiocache>=0.12.3",
    "psutil>=5.9",
    "sqlalchemy>=2.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0",
    "structlog>=24.1",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation>=0.42b0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.3",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "testcontainers[neo4j]>=4.8",
    "sentence-transformers>=2.3",
    "black>=24.0",
    "ruff>=0.2",
    "mypy>=1.8",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top of file
    "E722",   # Do not use bare `except`
    "W291",   # Trailing whitespace
    "W293",   # Blank line contains whitespace
    "B007",   # Loop control variable not used in loop body
    "B008",   # Do not perform function call in default arguments (FastAPI Depends pattern)
    "B015",   # Pointless comparison
    "B027",   # Empty method in abstract base class
    "B904",   # Within an `except` clause, raise exceptions with `raise ... from err`
    "B905",   # `zip()` without an explicit `strict=` parameter
    "N805",   # First argument of a method should be named `self`
    "N811",   # Constant imported as non-constant
    "N818",   # Exception name should end with `Error`
    "N801",   # Auto-generated TypedDictModel result classes use snake_case names
    "UP042",  # Use `StrEnum` instead of `(str, enum.Enum)` – pre-existing pattern
    "UP007",  # Use `X | Y` for union types
    "SIM101", # Multiple `isinstance()` calls, merge into a single call
    "SIM102", # Use a single `if` statement instead of nested `if` statements
    "SIM103", # Return the condition directly
    "SIM105", # Use `contextlib.suppress(...)` instead of `try`-`except`-`pass`
    "SIM108", # Use ternary operator instead of `if`-`else`-block
    "SIM117", # Use a single `with` statement with multiple contexts
    "SIM118", # Use `key in dict` instead of `key in dict.keys()`
    "C401",   # Unnecessary generator (use a set comprehension)
    "C405",   # Unnecessary `set` literal
    "C414",   # Unnecessary `list` or `tuple` call within `list()`
    "C416",   # Unnecessary `list` comprehension
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Note: Strict mode is enabled via Makefile CLI flags for CI consistency

# Annotation-gap noise in strict mode — suppress per-module.
# call-arg false positives arise from missing pydantic mypy plugin (incompatible
# with mypy 2.x); Field(None, ...) fields are optional at runtime.
[[tool.mypy.overrides]]
module = [
    "src.agents.narrative_synthesis",
    "src.agents.provenance_tracking",
    "src.agents.roi_calculation",
    "src.agents.scenario_engine",
    "src.agents.value_tree_projection",
    "src.agents.whitespace_analysis",
    "src.analytics.centrality",
    "src.analytics.communities",
    "src.analytics.manager",
    "src.analytics.similarity",
    "src.api.__init__",
    "src.api.app_factory",
    "src.api.app_monolith",
    "src.api.cache",
    "src.api.compat_wiring",
    "src.api.dependencies",
    "src.api.dependencies_tenant",
    "src.api.dependencies_tenant_secured",
    "src.api.exceptions",
    "src.api.main",
    "src.api.middleware_setup",
    "src.api.models",
    "src.api.rate_limiter",
    "src.api.router_groups",
    "src.api.routes.benchmarks",
    "src.api.routes.calculators",
    "src.api.routes.compat_aliases",
    "src.api.routes.competitive_intel",
    "src.api.routes.entities",
    "src.api.routes.entity_compat",
    "src.api.routes.evidence",
    "src.api.routes.formula_governance",
    "src.api.routes.formulas",
    "src.api.routes.knowledge",
    "src.api.routes.models",
    "src.api.routes.models_router",
    "src.api.routes.pack_loader",
    "src.api.routes.products",
    "src.api.routes.provenance_audit",
    "src.api.routes.query_search",
    "src.api.routes.roi_calculator",
    "src.api.routes.signals",
    "src.api.routes.system",
    "src.api.routes.tenant_resolution",
    "src.api.routes.value_packs",
    "src.api.routes.value_trees",
    "src.api.routes.variables",
    "src.api.shared_bootstrap",
    "src.api.telemetry",
    "src.api.versioning",
    "src.auth.api_keys",
    "src.auth.middleware",
    "src.backup.backup_manager",
    "src.cache.aiocache_adapter",
    "src.cache.ports",
    "src.cache.redis_cache",
    "src.cache.shadow",
    "src.config.manager",
    "src.config.settings",
    "src.db.cypher_execution_helper",
    "src.db.driver",
    "src.db.query_execution",
    "src.db.tenant_queries",
    "src.docs.api_documentation",
    "src.gateway.api_gateway",
    "src.ingestion.neo4j_loader",
    "src.ingestion.sync_manager",
    "src.ingestion.validators",
    "src.load_balancing.manager",
    "src.logging_config",
    "src.metrics.prometheus_metrics",
    "src.migrations.028_l3_tenant_standardization",
    "src.migrations.029_backfill_sync_metadata_tenant",
    "src.migrations.create_composite_tenant_indexes",
    "src.migrations.migrate_tenant_ids",
    "src.models.valuepack",
    "src.performance.cache",
    "src.rate_limiting.manager",
    "src.retrieval.graph_rag",
    "src.retrieval.hybrid_search",
    "src.retrieval.vector_store",
    "src.schema.initializer",
    "src.security.monitor",
    "src.security.query_validator",
    "src.services.case_study_service",
    "src.services.compat_metrics",
    "src.services.competitive_intel_service",
    "src.services.evidence_search",
    "src.services.product_service",
    "src.services.roi_calculator_service",
    "src.services.signal_persistence",
    "src.services.signal_quantification",
    "src.tracing.middleware",
    "src.tracing.tracer",
    "src.api.__init__",
    "src.api.metrics_state",
    "src.api.versioning",
    "src.api.routes.system",
    "src.api.routes.formulas",
    "src.backup.backup_manager",
    "src.ingestion.neo4j_loader",
    "src.services.signal_quantification",
]
disable_error_code = [
    "no-untyped-def",
    "type-arg",
    "unused-ignore",
    "no-any-return",
    "no-untyped-call",
    "attr-defined",
    "misc",
    "call-arg",
    "union-attr",
    "arg-type",
    "assignment",
    "var-annotated",
    "name-defined",
    "index",
    "typeddict-item",
    "return-value",
    "operator",
    "no-redef",
    "has-type",
    "comparison-overlap",
    "call-overload",
    "empty-body",
    "dict-item",
    "truthy-function",
    "redundant-cast",
    "override",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
pythonpath = ["src", "../..", "../../packages/shared/src"]
[tool.coverage.run]
source = ['src']
branch = true
omit = ['*/tests/*', '*/migrations/*']

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]
