[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "layer4-agents"
version = "0.2.0"
description = "Layer 4: Agentic Workflow Engine for Value Fabric with Multi-Agent Orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
    "cryptography>=43.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.1.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "asyncpg>=0.30.0",
    "openai>=1.54.0",
    "redis>=5.2.0",
    "neo4j>=5.26.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "python-multipart>=0.0.27",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "weasyprint>=62.0",
    "python-docx>=1.1.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    # Provenance & RDF
    "rdflib>=7.0.0",
    "prov>=2.0.0",
    # JWT for tenant middleware and OIDC
    "PyJWT>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "authlib>=1.3,<2.0",
    # Shared identity module dependencies
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    # Observability
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation>=0.41b0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    # Template & HTTP
    "jinja2>=3.1",
    "aiohttp>=3.9",
    # System metrics for health check
    "psutil>=5.9",
    # S3/MinIO export package storage
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.0",
    "pytest-randomly>=3.16.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "testcontainers>=4.8.0",
    "respx>=0.21.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
    "schemathesis>=3.38.0",
    "hypothesis>=6.122.0",
    "httpx>=0.27.0",
    # Mandatory test deps — tests fail (not skip) when these are absent
    "psycopg[binary]>=3.1.0",   # Required by testcontainers postgres integration tests
]

[dependency-groups]
dev = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "defusedxml>=0.7.1",
    "email-validator>=2.3.0",
    "hypothesis>=6.152.4",
    "jsonschema>=4.26.0",
    "neo4j>=6.1.0",
    "pymupdf4llm>=1.27.2.3",
    "pytesseract>=0.3.13",
    "pytest-asyncio>=1.3.0",
    "python-jose>=3.5.0",
    "rdflib>=7.6.0",
    "respx>=0.23.1",
    "schemathesis>=4.17.0",
    "selectolax>=0.4.7",
    "trafilatura>=2.0.0",
    "aiosqlite>=0.20.0",   # SQLite backend for harness persistence tests
    "alembic>=1.18.4",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top of file
    "E722",   # Do not use bare `except`
    "W291",   # Trailing whitespace
    "W293",   # Blank line contains whitespace
    "B007",   # Loop control variable not used in loop body
    "B008",   # Do not perform function call in default arguments (FastAPI Depends pattern)
    "B015",   # Pointless comparison
    "B027",   # Empty method in abstract base class
    "B904",   # Within an `except` clause, raise exceptions with `raise ... from err`
    "B905",   # `zip()` without an explicit `strict=` parameter
    "N805",   # First argument of a method should be named `self`
    "N811",   # Constant imported as non-constant
    "N818",   # Exception name should end with `Error`
    "N801",   # Auto-generated TypedDictModel result classes use snake_case names
    "UP042",  # Use `StrEnum` instead of `(str, enum.Enum)` – pre-existing pattern
    "UP007",  # Use `X | Y` for union types
    "SIM101", # Multiple `isinstance()` calls, merge into a single call
    "SIM102", # Use a single `if` statement instead of nested `if` statements
    "SIM103", # Return the condition directly
    "SIM105", # Use `contextlib.suppress(...)` instead of `try`-`except`-`pass`
    "SIM108", # Use ternary operator instead of `if`-`else`-block
    "SIM117", # Use a single `with` statement with multiple contexts
    "SIM118", # Use `key in dict` instead of `key in dict.keys()`
    "UP031",  # Use format specifiers instead of percent format
    "C401",   # Unnecessary generator (use a set comprehension)
    "C405",   # Unnecessary `set` literal
    "C414",   # Unnecessary `list` or `tuple` call within `list()`
    "C416",   # Unnecessary `list` comprehension
]

[tool.mypy]
python_version = "3.11"
plugins = ["sqlalchemy.ext.mypy.plugin"]
# Type safety ratchet - prevents regression (Gap 4)
# Baseline established: 2026-04-19
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual ratchet - set to true when ready
ignore_missing_imports = true
# Error report for CI
show_error_codes = true
show_column_numbers = true
# Performance
cache_dir = ".mypy_cache"

# Annotation-gap noise in strict mode — suppress per-module.
# call-arg false positives from missing pydantic mypy plugin (incompatible with mypy 2.x).
[[tool.mypy.overrides]]
module = [
    "src.agents.base",
    "src.agents.signal_detection",
    "src.agents.taxonomy",
    "src.api.app_factory",
    "src.api.core_routes",
    "src.api.middleware",
    "src.api.routes.accounts",
    "src.api.routes.agent_stream",
    "src.api.routes.analysis",
    "src.api.routes.billing",
    "src.api.routes.checkpoints",
    "src.api.routes.company_knowledge",
    "src.api.routes.crm_webhooks",
    "src.api.routes.enrichment",
    "src.api.routes.frontend_compat",
    "src.api.routes.governance_workflows",
    "src.api.routes.ground_truth_proxy",
    "src.api.routes.harness",
    "src.api.routes.health_badges",
    "src.api.routes.integrations",
    "src.api.routes.intelligence",
    "src.api.routes.narratives",
    "src.api.routes.prospects",
    "src.api.routes.signals",
    "src.api.routes.state_inspector",
    "src.api.routes.tools",
    "src.api.routes.value_hypotheses",
    "src.api.routes.workflows",
    "src.api.schemas.workflow_progress",
    "src.api.startup",
    "src.api.websocket.manager",
    "src.api.websocket.routes",
    "src.config.plans",
    "src.config.settings",
    "src.contracts.artifacts",
    "src.database",
    "src.database_facade",
    "src.engine.executor",
    "src.engine.scheduler",
    "src.engine.state_manager",
    "src.feature_flags.api.routes",
    "src.feature_flags.service",
    "src.harness",
    "src.harness.checkpoints",
    "src.harness.db_models",
    "src.harness.factory",
    "src.harness.human_gates",
    "src.harness.live_l5_validator",
    "src.harness.prompt_registry",
    "src.harness.registry",
    "src.harness.sql_stores",
    "src.harness.tests.test_harness_persistence",
    "src.harness.tests.test_live_l5_validator",
    "src.harness.tests.test_llm_rewrite",
    "src.harness.validation_hooks",
    "src.integration.layer1_client",
    "src.integration.layer2_client",
    "src.integration.layer3_client",
    "src.integration.layer5_client",
    "src.interfaces.formula_governance",
    "src.messaging.bus",
    "src.messaging.router",
    "src.messaging.types",
    "src.metrics.prometheus_metrics",
    "src.model_registry_client",
    "src.models.agent_state",
    "src.models.billing",
    "src.models.pause_point",
    "src.models.saved_scenario",
    "src.models.tool_schemas",
    "src.models.workspace_tab_data",
    "src.provenance.models",
    "src.provenance.store",
    "src.registry.api.routes",
    "src.resilience",
    "src.resilience_ports",
    "src.services.account_service",
    "src.services.billing_service",
    "src.services.company_knowledge_service",
    "src.services.context_gatherer",
    "src.services.conversation",
    "src.services.crm_sync_job_runner",
    "src.services.crm_sync_scheduler",
    "src.services.crm_sync_service",
    "src.services.encryption_service",
    "src.services.enrichment_orchestrator",
    "src.services.export_provenance",
    "src.services.export_storage",
    "src.services.formula_governance_service",
    "src.services.governed_llm_client",
    "src.services.health_tracker",
    "src.services.integration_service",
    "src.services.intelligence_orchestrator",
    "src.services.invoice_service",
    "src.services.llm_budget_guardrails",
    "src.services.llm_intent_classifier",
    "src.services.llm_provider",
    "src.services.narrative_builder_service",
    "src.services.notification",
    "src.services.oidc_cleanup",
    "src.services.overage_service",
    "src.services.stripe_client",
    "src.services.tenant_provisioning",
    "src.services.together_provider",
    "src.services.usage_service",
    "src.services.value_flow_facade",
    "src.services.value_hypothesis_engine",
    "src.services.variable_registry_service",
    "src.shared.domain.context",
    "src.shared.security.dil_auth",
    "src.skills.pack_skills",
    "src.tenant",
    "src.tenant.context",
    "src.tenants.api.routes.admin",
    "src.tenants.api.routes.admin_dashboard",
    "src.tenants.api.routes.api_keys",
    "src.tenants.api.routes.oidc",
    "src.tenants.api.routes.provisioning",
    "src.tenants.api.routes.registration",
    "src.tenants.api.routes.tenants",
    "src.tenants.email_verification",
    "src.tenants.provisioning",
    "src.tenants.service",
    "src.tenants.settings_schema",
    "src.tenants.tier_enforcement",
    "src.tenants.tiers",
    "src.tenants.usage",
    "src.tenants.usage_tracking",
    "src.tools",
    "src.tools.admin",
    "src.tools.analytics",
    "src.tools.calculation_tools",
    "src.tools.competitive_tools",
    "src.tools.crm_tools",
    "src.tools.document_export",
    "src.tools.generation_tools",
    "src.tools.integration_tools",
    "src.tools.knowledge",
    "src.tools.knowledge_tools",
    "src.tools.registry",
    "src.tools.signal_tools",
    "src.tools.utility_tools",
    "src.tools.workflows",
    "src.workflows",
    "src.workflows.base",
    "src.workflows.business_case",
    "src.workflows.replay",
    "src.workflows.roi_calculator",
    "src.workflows.whitespace",
]
disable_error_code = [
    "no-untyped-def",
    "type-arg",
    "unused-ignore",
    "no-any-return",
    "no-untyped-call",
    "attr-defined",
    "misc",
    "call-arg",
    "union-attr",
    "arg-type",
    "assignment",
    "var-annotated",
    "name-defined",
    "index",
    "typeddict-item",
    "return-value",
    "operator",
    "no-redef",
    "has-type",
    "comparison-overlap",
    "call-overload",
    "empty-body",
    "dict-item",
    "truthy-function",
    "redundant-cast",
    "override",
    "valid-type",
    "list-item",
    "abstract",
    "unused-coroutine",
    "return",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "src/harness/tests"]
addopts = "-v --tb=short"
pythonpath = ["src", "../..", "../../packages/shared/src", "../../services/layer3-knowledge/src", "../../packages/platform-contract/src/python"]
markers = [
    "unit: Fast unit tests with no external dependencies",
    "integration: Integration tests with real services (DB, cache)",
    "e2e: End-to-end tests with full container orchestration",
    "slow: Tests that take >5 seconds",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
fail_under = 80
