# Value Fabric Layer 5: Ground Truth Layer

[project]
name = "layer5-ground-truth"
version = "0.1.0"
description = "Ground Truth Layer for Value Fabric Platform — evidence-backed, CFO-defensible facts"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}

authors = [
    {name = "Value Fabric Team"}
]

dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",          # async PostgreSQL driver
    "psycopg2-binary>=2.9",   # sync driver for Alembic
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-multipart>=0.0.27",
    "httpx>=0.26",            # Layer 3 integration client
    "python-dateutil>=2.9",
    "infisicalsdk>=1.0.0",
    "structlog>=24.1",
    "pyjwt>=2.8.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation>=0.42b0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "redis>=5.0.0",
    "prometheus-client>=0.21.0",
]

[project.scripts]
layer5-freshness-reconciliation = "layer5_ground_truth.jobs.freshness_reconciliation:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.0",
    "pytest-randomly>=3.16.0",
    "httpx>=0.26",
    "black>=24.0",
    "ruff>=0.2",
    "mypy>=1.8",
    "sqlalchemy[mypy]>=2.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
    "testcontainers>=4.8.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top of file
    "E722",   # Do not use bare `except`
    "W291",   # Trailing whitespace
    "W293",   # Blank line contains whitespace
    "B007",   # Loop control variable not used in loop body
    "B008",   # Do not perform function call in default arguments (FastAPI Depends pattern)
    "B015",   # Pointless comparison
    "B027",   # Empty method in abstract base class
    "B904",   # Within an `except` clause, raise exceptions with `raise ... from err`
    "B905",   # `zip()` without an explicit `strict=` parameter
    "N805",   # First argument of a method should be named `self`
    "N811",   # Constant imported as non-constant
    "N818",   # Exception name should end with `Error`
    "N801",   # Auto-generated TypedDictModel result classes use snake_case names
    "UP042",  # Use `StrEnum` instead of `(str, enum.Enum)` – pre-existing pattern
    "UP007",  # Use `X | Y` for union types
    "SIM101", # Multiple `isinstance()` calls, merge into a single call
    "SIM102", # Use a single `if` statement instead of nested `if` statements
    "SIM105", # Use `contextlib.suppress(...)` instead of `try`-`except`-`pass`
    "SIM117", # Use a single `with` statement with multiple contexts
    "SIM118", # Use `key in dict` instead of `key in dict.keys()`
    "C401",   # Unnecessary generator (use a set comprehension)
    "C405",   # Unnecessary `set` literal
    "C414",   # Unnecessary `list` or `tuple` call within `list()`
    "C416",   # Unnecessary `list` comprehension
]

[tool.mypy]
python_version = "3.11"
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
# Note: Strict mode is enabled via Makefile CLI flags for CI consistency

# Annotation-gap noise in strict mode — suppress per-module.
[[tool.mypy.overrides]]
module = [
    "src.layer5_ground_truth.api.auth",
    "src.layer5_ground_truth.api.main",
    "src.layer5_ground_truth.api.model_registry_routes",
    "src.layer5_ground_truth.api.router",
    "src.layer5_ground_truth.api.schemas",
    "src.layer5_ground_truth.cache",
    "src.layer5_ground_truth.config",
    "src.layer5_ground_truth.database",
    "src.layer5_ground_truth.integration.layer3_client",
    "src.layer5_ground_truth.migrations.env",
    "src.layer5_ground_truth.migrations.versions.002_add_rls_policies",
    "src.layer5_ground_truth.migrations.versions.003_add_model_registry",
    "src.layer5_ground_truth.migrations.versions.004_rename_org_to_tenant",
    "src.layer5_ground_truth.migrations.versions.005_add_rls_to_model_registry",
    "src.layer5_ground_truth.migrations.versions.006_fix_rls_org_to_tenant",
    "src.layer5_ground_truth.migrations.versions.007_add_missing_truth_object_indexes",
    "src.layer5_ground_truth.migrations.versions.008_ensure_truth_objects_tenant_id",
    "src.layer5_ground_truth.migrations.versions.20240101_0000_a1b2c3d4e5f6_initial_ground_truth_schema",
    "src.layer5_ground_truth.models.truth_object",
    "src.layer5_ground_truth.services.freshness_monitor",
    "src.layer5_ground_truth.services.state_machine",
    "src.layer5_ground_truth.services.truth_service",
    "src.layer5_ground_truth.shared_bootstrap",
    "src.metrics.prometheus_metrics",
]
disable_error_code = [
    "no-untyped-def",
    "type-arg",
    "unused-ignore",
    "no-any-return",
    "no-untyped-call",
    "attr-defined",
    "misc",
    "call-arg",
    "union-attr",
    "arg-type",
    "assignment",
    "var-annotated",
    "name-defined",
    "index",
    "typeddict-item",
    "return-value",
    "return",
    "operator",
    "no-redef",
    "has-type",
    "comparison-overlap",
    "call-overload",
    "empty-body",
    "dict-item",
    "truthy-function",
    "redundant-cast",
    "override",
    "untyped-decorator",
]

[tool.pytest.ini_options]
pythonpath = ["src", "../..", "../../packages/shared/src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
[tool.coverage.run]
source = ['src']
branch = true
omit = ['*/tests/*', '*/migrations/*']

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]
