[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "layer6-benchmarks"
version = "1.0.0"
description = "Layer 6: Benchmark Service for Value Fabric - Comparative Intelligence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.21.0",
    "infisicalsdk>=1.0.0",
    "psutil>=6.0.0",
    "neo4j>=5.26.0",
    "pydantic-settings>=2.6.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation>=0.42b0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.0",
    "pytest-randomly>=3.16.0",
    "httpx>=0.27.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top of file
    "F841",   # Local variable assigned but never used
]

[tool.mypy]
python_version = "3.11"
# Note: Minimal config - additional flags passed via Makefile
